Added stylesheet seperately

--- a/index.html
+++ b/index.html
@@ -7,132 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .relative {
-            position: relative;
-        }
-
-        .inline {
-            display: inline-block;
-        }
-
-        .filter-button {
-            border: none;
-        }
-
-        .margin-vertical {
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
-
-        #advanced {
-            opacity: .7;
-            font-size: 11px;
-            margin-left: 70px;
-            top: 5px;
-            position: relative;
-        }
-
-        .advanced-button {
-            border-bottom: 1px dotted rgba(255, 255, 255, 0.6);
-        }
-
-        .left-inner-addon i {
-            position: absolute;
-            padding: 6px 12px;
-            pointer-events: none;
-        }
-
-        .dropdown-search {
-            background: inherit;
-            margin-top: 2px;
-            z-index: 999;
-            top: 100%;
-            min-width: 202px;
-            border-bottom: none;
-            padding: 4px 5px;
-        }
-
-        .left-inner-addon input {
-            padding-left: 30px;
-        }
-
-        .form-group {
-            margin-bottom: 0px;
-        }
-
-        .first-did a {
-            margin-top: 5px;
-            background-color: black;
-            color: white!important;
-            margin-bottom: -5px;
-        }
-
-        .first-did a:hover {
-            background-color: black!important;
-            color: white!important;
-        }
-
-        .searchable {
-            border-top-width: 0;
-            padding: 0;
-            overflow: auto;
-            width: 202px;
-            max-height: 186px;
-            margin-top: -9px;
-            border-radius: 0 0 3px 3px;
-            margin-left: 0px;
-        }
-
-        .search-control {
-            margin-left: -5px;
-            width: 202px;
-        }
-
-        .advanced-button {
-            cursor: pointer;
-        }
-
-        #advanced-options input {
-            margin-left: 65px;
-        }
-
-        #advanced-close-button {
-            margin-left: 200px;
-            cursor: pointer;
-        }
-
-        .btn {
-            background: 0 0;
-            box-shadow: none;
-            border: 1px solid #0082d5;
-            border-radius: 3px;
-            font-family: Roboto-Medium, Roboto, sans-serif;
-            font-size: 13px;
-        }
-
-        .btn.btn-success {
-            border-color: #04be5b;
-            color: #04be5b;
-        }
-
-        .btn.btn.btn-success:hover {
-            color: whitesmoke;
-        }
-
-        .btn.btn-primary {
-            color: #0082d5;
-            border: 1px solid #0082d5;
-        }
-
-        #submit-section {
-            margin-top: 14px;
-            margin-left: 30px;
-        }
-        #select-collection {
-            margin-left: 65px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <title>Rakam UI</title>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
